2006-09-07 HLT-v0-4
	- TPC digit reader classes fetch row range from AliHLTTPCTransform
        - code from TPC commissioning version merged
	  - DigitReaderRaw added with different read modes (sorted/unsorted;
	    several data specifications to adapt to the real data)
	  - DigitReaderPacked capable of sorting incoming data 
	  - straight line fit implemented in Conformal Mapping Fit
	- TPCDisplay library added
	  - the library needs the HOMER package, which is part of the PubSub
	    Framework, currently there is a circular dependency which will
	    be removed or handled better
	- bugfix HLTComponentHandler::CreateComponent: result handling after DoInit
	- bugfix ClusterFinder: index check for arrays of fixed size
	- base line calculation and zero suppression implemented into
	  Cluster Finder: new argument 'adc-threshold' for ClusterFinderComponent 
	- Makefiles of the old build scheme have been removed
2006-08-23 version HLT-v0-3
	- check for AliRoot features/libs/files and corresponding conditional
	  build
	- made package capable of handling the splitted RawData (changed in
	  AliRoot version v4-04-Rev-07
	- libHLTBase linked to ROOT libraries, TPCLib linked to ROOT and AliRoot
	  libraries -> avoid addlibrary options for wrapper subscriber 
	- made package indepentend of src
	  added BASE/AliHLTStdIncludes.h which should take the job of
	  including std headers
	- removed eff C++ warnings in BASE
	- TPCref library off by default
	- TPCLib version interface no 2
	- started to sort header includes in TPCLib
	- added version announcement to base library
	
2006-08-17 Jochen's TPCLib source code from Jan 2006 (not a joke) merged
	- bugfix in AliHLTTPCConfMapper (caused low tracking efficiency)
	- Online Display development
	- Note: the AliHLTTPCDisplay Interface has been changed -> AliHLTGUI
	  has to be re-linked
	- no changes in BASE

2005-09-07 Files imported from src comp and kalman into new TPCLib
	a short history of files ...