@@ -21,6 +21,11 @@ libAliHLTTPCDisplay_la_SOURCES	= AliHLTTPCDisplayMain.cxx \
 				  AliHLTTPCDisplayPadRow.cxx  \
 				  AliHLTTPCDisplayResiduals.cxx
 
+DEFAULT_GEOMETRY		= alice.geom
+libAliHLTTPCDisplay_la_DATA	= $(DEFAULT_GEOMETRY)
+libAliHLTTPCDisplay_ladir	= $(pkgdatadir)
+AM_CPPFLAGS			+= -DDEFAULT_GEOMETRY=\"$(libAliHLTTPCDisplay_ladir)/$(DEFAULT_GEOMETRY)\"
+
 # class header files, the link definition for the root dictionary
 # will be created from the names of the header files
 CLASS_HDRS			= AliHLTTPCDisplayMain.h  \
@@ -42,7 +47,10 @@ libAliHLTTPCDisplay_la_LDFLAGS	= -L@ROOTLIBDIR@ \
 				  @ALIROOT_LDFLAGS@ \
 				  @ALIROOT_LIBS@ \
 				  @HOMER_LDFLAGS@ \
-				  -version-info 1:0:0
+				  -version-info 1:1:0
+
+# automatic generation of data and time of library build
+COMPILE_INFO			=  AliHLTTPCDisplayCompileInfo.cxx
 
 # set the file name for the generated root dictionary
 DICTCPP				=  AliHLTTPCDisplay-DICT.cxx
@@ -50,8 +58,26 @@ DICTCPP				=  AliHLTTPCDisplay-DICT.cxx
 # dictionary files and which are not part of the CLASS_HDRS
 DICTINCLUDE			= AliHLTTPCSpacePointData.h \
 				  AliHLTTPCTrackArray.h
-nodist_libAliHLTTPCDisplay_la_SOURCES  =  $(DICTCPP)
+nodist_libAliHLTTPCDisplay_la_SOURCES  =  $(COMPILE_INFO) \
+				 	  $(DICTCPP)
 
 CLEANFILES			= 
 
 include $(top_srcdir)/make.dict
+
+$(COMPILE_INFO): $(libAliHLTTPCDisplay_la_SOURCES) $(pkginclude_HEADERS) $(noinst_HEADERS) Makefile.am
+	@echo '//automatically generated compilation info' > $@
+	@echo '//!!! DO NOT EDIT THIS FILE !!!' >> $@
+	@echo '//add changes in Makefile.am' >> $@
+	@echo '#include <iostream>' >> $@
+	@echo 'void $(MODULE)CompileInfo( char*& date, char*& time)' >> $@
+	@echo '{date=__DATE__; time=__TIME__; return;}' >> $@
+	@echo >> $@
+	@echo 'extern "C" const char* __lib$(MODULE)Properties=""' >> $@
+	@echo '#if defined(HAVE_HOMERREADER) 	  ' >> $@
+	@echo '"HOMER"'                             >> $@
+	@echo '#endif // defined(HAVE_HOMERREADER)' >> $@
+	@echo ';'                                   >> $@
+	@echo >> $@
+	@echo 'void __init()'>> $@
+	@echo '{std::cout << "lib$(MODULE) build on " << __DATE__ << " - " << __TIME__ << std::endl;}'>> $@
